Added a bunch of extra evaluation results

--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -1,5 +1,5 @@
 
-We will now give the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. We build on the approaches presented in \cite{confalonieri2020towards} and introduce further the weakening of RIAs as well a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
+It follows now the extended definitions for the cover sets, refinement operators, and axiom weakening operator to \SROIQ concepts and axioms. This work builds on the approaches presented in \cite{confalonieri2020towards} and introduce further the weakening of RIAs as well a separation between $\Omcref$ and $\Omcfull$. We begin by defining the upward and downward cover sets. These are now defined for both concepts and roles. The set of subconcepts is taken from $\Omcfull$ as opposed to $\Omcref$, as it is likely to contain more subconcepts, thus improving the granularity of the cover sets. Further, the cover sets for roles are computed over the set of simple roles in $\Omcfull$. Additionally, we define the upward and downward cover also for non-negative integers, as they will be useful for the refinement of cardinality constraints.
 
 \begin{definition} \label{def:covers}
   Let $\Omcfull$ and $\Omcref \subseteq \Omcfull$ be two \SROIQ ontologies that share the same vocabulary $N_C$, $N_R$, and $N_I$. The \emph{upward cover} and \emph{downward cover} for a concept $C$ are given by
