--- a/sections/b.main/4.implementation/1.prototype.tex
+++ b/sections/b.main/4.implementation/1.prototype.tex
@@ -59,7 +59,7 @@ It follows a brief description of the algorithm used for caching subsumptions li
 \end{align*}
 The first implication follows trivially from the fact that subsumption between concepts or roles is transitive. The second also follows from transitivity. It can be observed that, given $C \sqsubseteq_\Omc E$ and $F \sqsubseteq_\Omc D$, if $E \sqsubseteq_\Omc F$ were to hold, then $C \sqsubseteq_\Omc D$ would also have to hold by transitivity. Separate instances of $S$, $K$ and $P$ are used for the computation of concept and role subsumptions.
 
-For actually computing subsumptions between roles, \textsc{TestSubsumtion($C, D$)} is a simple call to the reasoner. However, for computing subsumption between concepts, one further step is used. It is applied immediately before possibly calling the reasoner. If any of the following rules can be comupted using only the information in $S$, $K$, and $P$, the reasoner is not called, and the result returned from \textsc{TestSubsumtion($C, D$)}. Otherwise, the reasoner is used as usual to compute the subsumption.
+For actually computing subsumptions between roles, \textsc{TestSubsumtion($C, D$)} is a simple call to the reasoner. However, for computing subsumption between concepts, one further step is used. It is applied immediately before possibly calling the reasoner. If any of the following rules can be computed using only the information in $S$, $K$, and $P$, the reasoner is not called, and the result returned from \textsc{TestSubsumtion($C, D$)}. Otherwise, the reasoner is used as usual to compute the subsumption.
 \begin{align*}
   C_i \not\sqsubseteq_\Omc D \text{ for some } i \in \{ 1, \dots, n \} &\implies C_1 \sqcup \cdots \sqcup C_n \not\sqsubseteq_\Omc D \\
   C_i \sqsubseteq_\Omc D \text{ for all } i \in \{ 1, \dots, n \} &\implies C_1 \sqcup \cdots \sqcup C_n \sqsubseteq_\Omc D \\
