--- a/sections/b.main/5.evaluation/3.perf.tex
+++ b/sections/b.main/5.evaluation/3.perf.tex
@@ -4,39 +4,39 @@ The performance of the axiom weakening based repair algorithm shown in \cref{alg
 \begin{table}[ht]
   \scriptsize
   \centering
-  \begin{tabular}{|l|rrrr@{ }r|}
-    \cline{2-6}
-    \multicolumn{1}{l|}{} & Steps & Calls & Time [ms] & \multicolumn{2}{r|}{Failed} \\
+  \begin{tabular}{|l|r@{ }lr@{ }lr@{ }lr@{ }r|}
+    \cline{2-9}
+    \multicolumn{1}{l|}{} & \multicolumn{2}{c}{Steps} & \multicolumn{2}{c}{Calls} & \multicolumn{2}{c}{Time [ms]} & \multicolumn{2}{c|}{Failed} \\
     \hline
-    admin & 8.5 & 9462 & 15649 & 1\% & (1\%) \\
-    ahso & 2.1 & 4783 & 11922 & 10\% & (28\%) \\
-    cdao & 2.4 & 16734 & 20674 & 12\% & (47\%) \\
-    cdpeo & 1.6 & 4633 & 2068 & 0\% & (0\%) \\
-    covid19-ibo & 1.3 & 14632 & 2186 & 4\% & (12\%) \\
-    ecp & 1.3 & 2027 & 6034 & 0\% & (12\%) \\
-    emo & 1.5 & 19013 & 5624 & 0\% & (2\%) \\
-    evi & 5.5 & 6405 & 4916 & 10\% & (68\%) \\
-    falls & 1.6 & 1328 & 876 & 2\% & (7\%) \\
-    fo & 1.5 & 1282 & 1064 & 25\% & (62\%) \\
-    gbm & 1.5 & 8092 & 2911 & 0\% & (0\%) \\
-    gfvo & 1.8 & 4199 & 2352 & 0\% & (0\%) \\
-    koro & 1.8 & 6340 & 2277 & 0\% & (0\%) \\
-    lico & 2.7 & 7013 & 3661 & 1\% & (20\%) \\
-    mamo & 2.6 & 4799 & 2243 & 0\% & (0\%) \\
-    mpio & 2.4 & 1987 & 999 & 8\% & (30\%) \\
-    pizza & 2.0 & 7453 & 28225 & 19\% & (57\%) \\
-    provo & 5.0 & 7000 & 8587 & 5\% & (10\%) \\
-    qudt & 1.1 & 7150 & 6389 & 8\% & (41\%) \\
-    trans & 1.7 & 3218 & 1494 & 0\% & (6\%) \\
-    triage & 2.4 & 4295 & 6107 & 17\% & (49\%) \\
-    vio & 2.7 & 9406 & 10955 & 4\% & (7\%) \\
+    admin & 6.3 & [4.0, 9.2] & 7621 & [5601, 10118] & 9638 & [5433, 14909] & 2\% & (2\%) \\
+    ahso & 2.1 & [1.7, 2.5] & 4648 & [4228, 5131] & 11469 & [8122, 15336] & 11\% & (26\%) \\
+    cdao & 2.1 & [1.8, 2.5] & 16137 & [14576, 17740] & 20767 & [15204, 27269] & 19\% & (48\%) \\
+    cdpeo & 1.5 & [1.3, 1.7] & 4476 & [4250, 4716] & 2050 & [1942, 2169] & 0\% & (0\%) \\
+    covid19-ibo & 1.3 & [1.2, 1.5] & 14822 & [14321, 15320] & 2208 & [2126, 2296] & 4\% & (13\%) \\
+    ecp & 1.3 & [1.2, 1.5] & 2020 & [1916, 2133] & 4453 & [2738, 6939] & 1\% & (14\%) \\
+    emo & 1.4 & [1.3, 1.6] & 18549 & [17473, 19615] & 6582 & [4439, 9688] & 1\% & (4\%) \\
+    evi & 5.0 & [3.9, 6.4] & 5955 & [4680, 7425] & 4719 & [3408, 6349] & 19\% & (64\%) \\
+    falls & 1.5 & [1.3, 1.6] & 1242 & [1161, 1331] & 874 & [843, 909] & 1\% & (5\%) \\
+    fo & 1.6 & [1.4, 1.8] & 1295 & [1179, 1423] & 1090 & [1025, 1164] & 38\% & (61\%) \\
+    gbm & 1.5 & [1.3, 1.6] & 7608 & [7070, 8131] & 2954 & [2808, 3117] & 0\% & (0\%) \\
+    gfvo & 1.8 & [1.6, 2.0] & 4167 & [3864, 4501] & 2404 & [2258, 2569] & 0\% & (0\%) \\
+    koro & 1.9 & [1.7, 2.2] & 6195 & [5697, 6706] & 2456 & [2277, 2648] & 0\% & (0\%) \\
+    lico & 2.6 & [2.2, 2.9] & 6638 & [6105, 7186] & 3709 & [3400, 4077] & 1\% & (22\%) \\
+    mamo & 2.5 & [2.2, 2.9] & 4667 & [4228, 5128] & 2215 & [2046, 2403] & 0\% & (0\%) \\
+    mpio & 2.2 & [1.8, 2.6] & 1908 & [1720, 2133] & 987 & [913, 1078] & 9\% & (30\%) \\
+    pizza & 2.0 & [1.7, 2.3] & 7550 & [6723, 8419] & 26767 & [20554, 34014] & 28\% & (55\%) \\
+    provo & 4.9 & [3.7, 6.3] & 6851 & [5383, 8465] & 8878 & [5962, 12348] & 4\% & (8\%) \\
+    qudt & 1.1 & [1.0, 1.2] & 7044 & [6816, 7291] & 6658 & [4229, 9672] & 9\% & (38\%) \\
+    trans & 3.2 & [1.8, 5.1] & 4384 & [3213, 5894] & 3684 & [1610, 6513] & 0\% & (5\%) \\
+    triage & 3.2 & [2.4, 4.3] & 5166 & [4255, 6351] & 8979 & [6084, 13102] & 28\% & (51\%) \\
+    vio & 2.5 & [2.1, 3.0] & 9476 & [8628, 10327] & 15199 & [10496, 20803] & 3\% & (7\%) \\
     \hline
   \end{tabular}
   \caption{Results of the evaluation with respect to performance. Number of weakening iterations, reasoner calls, and total repair time are given as sample mean, with 95\% confidence interval in brackets. The frequency of failed runs is shown as percentage of repairs by weakening that were started but not completed. In parentheses the percentage of total failed runs including those with timeout during generation of the inconsistent ontology.}
   \label{table:results-perf}
 \end{table}
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \includegraphics[width=\textwidth]{resources/time-ontology-violin.png}
   \caption{Distribution of (real) execution time required for repairing a single ontology using axiom weakening. Attempts that failed by timeout or other errors were not considered.}
